Date Range Selector: Fix width on mobile devices

--- a/hsreplaynet/static/styles/controls.scss
+++ b/hsreplaynet/static/styles/controls.scss
@@ -7,7 +7,7 @@
 			text-align: center;
 		}
 
-		> input {
+		> input, > .input-group {
 			width: 100%;
 		}
 	}
